# tooling

./: CONTRIBUTING.md  LICENSE  README.md  TODO.md
miscTools/autoTaskReviewer/: autotask mcp
miscTools/autoTaskReviewer/autotask_mcp/: .env.example  .gitignore  README.md  SETUP_NOTES.md  __init__.py  autotask_client.py  cache.py  client.py  config.py  models.py  pyproject.toml  run_server.py  server.py  server_utils.py
miscTools/cloudCost/: README.md  cloudCost.py  requirements.txt
miscTools/oktaIntegration/: temp.md
miscTools/oktaIntegration/entra-id-user-sync/: .gitignore  CONTRIBUTING.md  README.md  TODO.md  sync-users.ps1
miscTools/oktaIntegration/entra-id-user-sync/docs/: sync-flow.mmd
miscTools/oktaIntegration/entra-id-user-sync/tests/: test_sync_users_script.py
miscTools/oktaIntegration/okta-sso-studio-tools/: .env.example  CONTRIBUTING.md  README.md  TODO.md  app.js  package.json
miscTools/oktaIntegration/okta-sso-studio-tools/docs/: architecture.mmd  auth-flow.mmd
miscTools/oktaIntegration/okta-sso-studio-tools/public/: index.html
miscTools/oktaIntegration/okta-sso-studio-tools/scripts/: setup-okta.sh
miscTools/oktaIntegration/okta-sso-studio-tools/tests/: app.test.js
terraform/aws/CloudWatch/: main.tf  readme.md  simQmetrics.py
terraform/azure/storageProvision/: main.tf  migrate_assets.py  readme.md  requirements.txt  variables.tf
terraform/gcs/HybridSync/: main.tf  readme.md  syncScript.sh
